[gd_scene load_steps=9 format=3 uid="uid://carf2o1y7wvmc"]

[ext_resource type="Script" path="res://src/interface_elements/color_field.gd" id="1_330tl"]
[ext_resource type="Texture2D" uid="uid://y0l74x73w0co" path="res://visual/CheckerboardMini.svg" id="2_gsj5a"]
[ext_resource type="Script" path="res://src/interface_elements/color_popup.gd" id="2_hgyyv"]
[ext_resource type="PackedScene" uid="uid://cpvtf3kaa2ltr" path="res://src/interface_elements/color_swatch.tscn" id="3_38vpq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpguh"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0588235, 0.117647, 0.301961, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5acu"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0745098, 0.156863, 0.4, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n6p7"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.8, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16ktf"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.121569, 0.14902, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[node name="ColorField" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 22)
offset_right = 50.0
offset_bottom = 21.0
theme_override_constants/separation = 0
script = ExtResource("1_330tl")
checkerboard = ExtResource("2_gsj5a")

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(54, 0)
layout_mode = 2
max_length = 8
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fpguh")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5acu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5n6p7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_16ktf")

[node name="ColorPopup" type="Popup" parent="."]
transparent_bg = true
size = Vector2i(150, 142)
script = ExtResource("2_hgyyv")

[node name="PanelContainer" type="PanelContainer" parent="ColorPopup"]
custom_minimum_size = Vector2(150, 0)
offset_right = 150.0
offset_bottom = 142.0

[node name="MarginContainer" type="MarginContainer" parent="ColorPopup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainContainer" type="VBoxContainer" parent="ColorPopup/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Pure" type="VBoxContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure"]
layout_mode = 2
text = "Pure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PureSwatches" type="HFlowContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 2

[node name="White" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure white"
color_hex = "ffffff"

[node name="Black" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure black"
color_hex = "000000"

[node name="Red" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure red"
color_hex = "ff0000"

[node name="Green" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure green"
color_hex = "00ff00"

[node name="Blue" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure blue"
color_hex = "0000ff"

[node name="Blue2" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Pure/PureSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Pure blue"
color_hex = "none"

[node name="Common" type="VBoxContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common"]
layout_mode = 2
text = "Common"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommonSwatches" type="HFlowContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 2

[node name="Icon" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Icon color"
color_hex = "e0e0e0"

[node name="IconDisabled" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Icon disabled color"
color_hex = "919191"

[node name="Node2D" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Node2D color"
color_hex = "8da5f3"

[node name="Control" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Control color"
color_hex = "8eef97"

[node name="Node3D" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Node3D color"
color_hex = "fc7f7f"

[node name="Animation" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Animation color"
color_hex = "c38ef1"

[node name="Mesh" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Mesh color"
color_hex = "ffca5f"

[node name="Shape" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Shape color"
color_hex = "2998ff"

[node name="ShapeLight" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Shape light color"
color_hex = "a2d2ff"

[node name="Input" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Common/CommonSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Input color"
color_hex = "69c4d4"

[node name="Rainbow" type="VBoxContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow"]
layout_mode = 2
text = "Rainbow"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RainbowSwatches" type="HFlowContainer" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 2

[node name="Red" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow red"
color_hex = "ff4545"

[node name="Yellow" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow yellow"
color_hex = "ffe345"

[node name="Green" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow green"
color_hex = "80ff45"

[node name="Aqua" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow aqua"
color_hex = "45ffa2"

[node name="Blue" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow blue"
color_hex = "45d7ff"

[node name="Purple" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow purple"
color_hex = "8045ff"

[node name="Pink" parent="ColorPopup/PanelContainer/MarginContainer/MainContainer/Rainbow/RainbowSwatches" instance=ExtResource("3_38vpq")]
layout_mode = 2
tooltip_text = "Rainbow pink"
color_hex = "ff4596"

[connection signal="focus_entered" from="LineEdit" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="resized" from="Button" to="." method="_on_button_resized"]
[connection signal="color_picked" from="ColorPopup" to="." method="_on_color_picked"]
